--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name":"Malvart",
-    "name":"Se está instalando la app",
+    "name":"Artesanías Malvart",
     "start_url":"index.html",
     "background_color":"#ffcc50",
     "theme_color":"#ffcc50",
